# hexlet-django-blog

./: .env  Makefile  db.sqlite3  pyproject.toml  setup.cfg
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/articles/: index.html
