[tool.poetry]
name = "python-django-blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog"
authors = ["Tata Pestova <tata.pestova@inbox.ru>"]
readme = "README.md"
packages = [{include = "python_django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
